Removed broken call link

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact</h2>
                 <p>We're confident your mobile vision can be realized. Contact us today!</p>
-                <p><a href="mailto:{{ site.email }}">{{ site.email }}</a>  or <span class="call-link">call</span></p>
+                <p><a href="mailto:{{ site.email }}">{{ site.email }}</a></p>
                 <ul class="list-inline banner-social-buttons">
                     {% for network in site.social %}
                     <li>
